--- a/.github/workflows/github-npm-publish.yml
+++ b/.github/workflows/github-npm-publish.yml
@@ -18,7 +18,7 @@ jobs:
           # Defaults to the user or organization that owns the workflow file
           scope: '@kerrickdev'
       - run: yarn
-      - run: yarn test
+      - run: yarn build
       - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
