--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@kerrickdev/docker-util",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Dockerize your Node.js app with ease.",
   "author": {
     "name": "Kerrick Chan",
     "email": "me@kerrick.dev"
   },
   "license": "MIT",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "@types/dockerode": "^3.3.19",
     "@types/jest": "^29.5.3",
