--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@types/dockerode": "^3.3.19",
     "@types/jest": "^29.5.3",
