--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "devDependencies": {
     "@types/dockerode": "^3.3.19",
     "@types/jest": "^29.5.3",
-    "docker-compose": "^0.24.2",
-    "dockerode": "^3.3.5",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "docker-compose": "^0.24.2",
+    "dockerode": "^3.3.5"
   },
   "scripts": {
     "build": "tsc",
